fixing scroll 'Others' on iPhone 6, 7, 8+ and iPad

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -395,6 +395,7 @@ ul {
 iframe {
     width: 260px;
     height: 146.3px;
+    z-index: +10;
 }
 
 .noLineThree img:hover,
